--- a/.travis.yml
+++ b/.travis.yml
@@ -70,7 +70,7 @@ matrix:
 
   allow_failures:
     - python: 3.5
-      TESTS=trial
+      TESTS: trial
 
 # Dependencies installation commands
 install:
